# android-suica-viewer

./: .gitignore  README.ja.md  README.md  pyproject.toml  settings.gradle.kts
.devcontainer/: Dockerfile  devcontainer.json  on_create.sh
.github/workflows/: android-release.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: station_codes.csv
app/src/main/java/io/github/serkenn/suicaviewer/: CardReader.kt  MainActivity.kt  RemoteAuthClient.kt  StationCodeLookup.kt  SuicaLabels.kt  SuicaViewerUi.kt
app/src/main/res/values/: strings.xml  themes.xml
packaging/: cli_entry.py  gui_entry.py  suica-viewer.spec
suica_viewer/: auth_client.py  card_data.py  cli.py  gui.py  reader_errors.py  utils.py  web.py
suica_viewer/web_static/: demo_card.json  index.html
