[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suica-viewer"
version = "0.1.0"
description = ""
authors = [
    {name = "KIRISHIKI Yudai", email = "yudai.kirishiki@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nfcpy",
]
packages = [
    {include = "felica_viewer"}
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8",
]

[project.scripts]
suica-viewer = "suica_viewer.cli:main"
suica-viewer-gui = "suica_viewer.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests import `app` from the repo root rather than from an installed distribution
pythonpath = ["."]
