[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suica-viewer"
version = "1.0.0"
description = ""
authors = [
    {name = "KIRISHIKI Yudai", email = "yudai.kirishiki@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi",
    "libusb1",
    "nfcpy",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8",
]
build = [
    "pyinstaller>=6.21",
]

[project.scripts]
suica-viewer = "suica_viewer.cli:main"
suica-viewer-gui = "suica_viewer.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["suica_viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests import `suica_viewer` from the repo root rather than from an installed distribution
pythonpath = ["."]
